# teegeepay

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
crates/api/: .env.example  Cargo.toml  Dockerfile
crates/api/migrations/: 20260121053759_initial.sql  20260215000000_wallets_kms.sql  Dockerfile
crates/api/src/: auth.rs  db.rs  kms.rs  main.rs  models.rs  partial_sign.rs  routes.rs
crates/api/src/handlers/: convert.rs  health.rs  mod.rs
crates/api/src/handlers/telegram/: auth.rs  mod.rs
crates/api/src/handlers/tokens/: create.rs  mint.rs  mod.rs  supply.rs
crates/api/src/handlers/transfers/: create.rs  mod.rs  telegram.rs
crates/api/src/handlers/wallets/: airdrop.rs  balance.rs  create.rs  deposit.rs  list.rs  mod.rs  withdraw.rs
crates/api/src/solana/: airdrop.rs  balance.rs  confidential_keys.rs  create.rs  deposit.rs  mint.rs  mod.rs  signature_signer.rs  supply.rs  tokens.rs  transaction.rs  transfer.rs  utils.rs  withdraw.rs  zk.rs
keypairs/: auditor.json  authority.json  token.json
scripts/: api-local.sh  create-mint.sh  db-up.sh  reset-network.sh  run-migrations.sh
ui/: next.config.mjs  package.json  pnpm-lock.yaml  test.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: auth-gate.tsx  simple-auth-gate.tsx  theme-toggle.tsx  wallet-app.tsx
ui/components/screens/: balance-screen.tsx  convert-screen.tsx  onboarding-screen.tsx  review-screen.tsx  send-screen.tsx  status-screen.tsx
ui/components/ui/: calendar.tsx  sidebar.tsx
ui/lib/: auth-context-simple.tsx  auth-context.tsx  explorer.ts  telegram.ts  utils.ts  wallet-context.tsx
