[package]
name = "solana-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true}
serde_with = { workspace = true }

solana-instruction = { workspace = true }
solana-transaction = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-client = { workspace = true }
spl-token-confidential-transfer-proof-generation = { workspace = true }
spl-token-confidential-transfer-proof-extraction = { workspace = true }
spl-token-2022-interface = { workspace = true }
spl-token-client = { workspace = true }
solana-system-interface = { workspace = true }
solana-account = { workspace = true }
solana-hash = { workspace = true }
solana-program-pack = { workspace = true }
solana-message = { workspace = true }

bytemuck = "1.20.0"
